--- a/New folder/Examp.html
+++ b/New folder/Examp.html
@@ -8,6 +8,6 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-     
+       <b style="text-align:center;margin-left: 450px;">Flowers shop<sup>&reg;</sup>Copyright 2018. All rights reserved.</b>
     </body>
 </html>
